--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,13 @@
-<h1>Sample App</h1>
-<p>This is the home page for 
-  <a href="https://github.com/dkeehl">dkeehl's</a>
-  rails sample app
-</p>
+<div class="center jumbotron">
+  <h1>Welcome to the Sample App</h1>
+  <h2>This is the home page for 
+    <a href="https://github.com/dkeehl">dkeehl's</a>
+    rails sample app
+  </h2>
+
+  <%= link_to 'Sign up now!', signup_path, class: 'btn btn-lg btn-primary' %>
+</div>
+
+<%= link_to image_tag('rails.png', alt: 'Rails logo'),
+            'http://rubyonrails.org/' %>
+
