--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,11 +6,19 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= render 'form' %>
-    <!--
-    <div class="gravater_edit">
-      <%= photo_for @user %>
+    <ul class="nav nav-tabs">
+      <li class="active"><a data-toggle="tab" href="#basic">Basic information</a></li>
+      <li><a data-toggle="tab" href="#photo">Photo</a></li>
+    </ul>
+
+    <div class="tab-content">
+      <div id="basic" class="tab-pane fade in active">
+        <%= render 'form' %>
+      </div>
+      <div id="photo" class="tab-pane fade">
+        <%= photo_for @user %>
+        <%= render 'photo_form' %>
+      </div>
     </div>
-    -->
   </div>
 </div>
